# crude_trac

./: hello.py  pyproject.toml
src/: domain.py
tests/: test_domain.py
