[project]
name = "crude-trac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
dev = ["pyright>=1.1.390", "pytest>=8.3.4", "ruff>=0.8.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = ['--strict-markers', '--strict-config', '-ra']
testpaths = ['tests/']

[tool.coverage.html]
skip_covered = true
skip_empty = true
